<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAlumnoActivity">

    <EditText
        android:id="@+id/txtNombreAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellidosAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/spCiclosAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/spinner_ciclos" />

    <RadioGroup
        android:id="@+id/rgGruposAddAlumno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rbGrupoAAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a" />

        <RadioButton
            android:id="@+id/rbGrupoBAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <RadioButton
            android:id="@+id/rbGrupoCAddAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCrearAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:text="@string/crear" />

        <Button
            android:id="@+id/btnCancelarAddAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:width="0dp"
            android:text="CANCELAR" />
    </LinearLayout>
</LinearLayout>